@@ -1,3 +1,11 @@
+2010-01-17  John Dallaway  <john@dallaway.org.uk>
+
+	* src/flashiodevlegacy.c: Specify flash block device lengths correctly
+	when using static configuration via absolute addresses. Issue reported
+	by Daniel Helgason.
+	* cdl/io_flash.cdl: Fix display strings for
+	CYGNUM_IO_FLASH_BLOCK_ABSOLUTE_START_[12].
+
 2009-03-02  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
 
 	* doc/flash.sgml: Fixed typos in a FLASH API listing.
@@ -691,7 +699,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2005, 2006, 2008, 2009 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2005, 2006, 2008, 2009, 2010 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
